--- a/index.html
+++ b/index.html
@@ -3571,7 +3571,11 @@ function parseSeasonNumber(label){
   const num=Number(match[1]);
   return Number.isFinite(num)?num:null;
 }
-function allocationGrantsLevelToPool(seasonLabel){
+function escapeRegExp(str){
+  const re=/[.*+?^${}()|[\]\\]/g;
+  return String(str).replace(re,'\\$&');
+}
+function allocationSeasonEligibleForLevelAccrual(seasonLabel){
   if(!seasonLabel) return true;
   const normalized=String(seasonLabel).toLowerCase();
   if(normalized.includes('pre-season 11') || normalized.includes('pre season 11')){
@@ -3580,6 +3584,76 @@ function allocationGrantsLevelToPool(seasonLabel){
   const seasonNumber=parseSeasonNumber(seasonLabel);
   if(seasonNumber==null) return true;
   return seasonNumber>=11;
+}
+function isLevelOnlyAllocation(allocationText, parsed){
+  const detail=parsed || interpretAllocationDetails(allocationText);
+  if(!detail || detail.levelsSpent==null || !Number.isFinite(detail.levelsSpent) || detail.levelsSpent<=0){
+    return false;
+  }
+  if(detail.itemTokens && detail.itemTokens.length){
+    return false;
+  }
+  if(detail.downtimeSpent!=null && detail.downtimeSpent>0){
+    return false;
+  }
+  if(detail.goldSpent!=null && detail.goldSpent>0){
+    return false;
+  }
+  let working=String(allocationText||'').toLowerCase();
+  if(!working.trim()) return false;
+  if(Array.isArray(detail.recipients)){
+    detail.recipients.forEach(name=>{
+      if(!name) return;
+      const lowered=String(name).toLowerCase().trim();
+      if(!lowered) return;
+      const pattern=new RegExp(escapeRegExp(lowered),'g');
+      working=working.replace(pattern,' ');
+    });
+  }
+  working=working.replace(/\b\d+\s*(?:levels?|lvl)\b/g,' ');
+  working=working.replace(/\blevels?\b/g,' ');
+  working=working.replace(/\bplayer\b/g,' ');
+  working=working.replace(/\brewards?\b/g,' ');
+  working=working.replace(/\band\b/g,' ');
+  working=working.replace(/\bbonus\b/g,' ');
+  working=working.replace(/\bto\b/g,' ');
+  working=working.replace(/[+,&:()]/g,' ');
+  working=working.replace(/\s+/g,' ').trim();
+  return !working;
+}
+function allocationHasNonLevelReward(allocationText, parsed){
+  const detail=parsed || interpretAllocationDetails(allocationText);
+  if(!detail) return false;
+  if(detail.downtimeSpent!=null && detail.downtimeSpent>0){
+    return true;
+  }
+  if(detail.goldSpent!=null && detail.goldSpent>0){
+    return true;
+  }
+  if(detail.itemTokens && detail.itemTokens.some(token=>token && !/(?:loss|period|expire|expiration|forfeit|penalty)/i.test(token))){
+    return true;
+  }
+  const raw=String(allocationText||'').toLowerCase();
+  if(!raw.trim()) return false;
+  if(/\b(loss|forfeit|expire|expiration|penalty)\b/.test(raw)){
+    return false;
+  }
+  if(/\b(?:reward|item|potion|tattoo|wand|staff|amulet|boots|armor|shield|ring|stone|cloak|rod|scroll|saddle|quiver|caress|fiddle|maul|sword|bow|splint|mace|gem|guide|arrows|favor|rescue|saddle|boots|gloves|cowl|blade|tome|pen|shawl|sling|cloak)\b/.test(raw)){
+    return true;
+  }
+  if(raw.includes('+')){
+    return true;
+  }
+  return false;
+}
+function allocationGrantsLevelToPool(seasonLabel, allocationText, parsed){
+  if(!allocationSeasonEligibleForLevelAccrual(seasonLabel)){
+    return false;
+  }
+  if(isLevelOnlyAllocation(allocationText, parsed)){
+    return false;
+  }
+  return allocationHasNonLevelReward(allocationText, parsed);
 }
 function buildDmEntries(){
   DM_ENTRIES=[];
@@ -3629,19 +3703,21 @@ function buildDmEntries(){
   const addPreEntry=(entry)=>{
     const season=normalizeSeason('Pre-Season 11');
     const parsed=interpretAllocationDetails(entry.allocation);
-    const rawLevels=dmToNullableNumber(entry.levels_plus);
-    const levelsEarned=(rawLevels!=null && rawLevels>0)?rawLevels:1;
     let levelsSpent=null;
-    if(parsed && parsed.levelsSpent!=null){
-      levelsSpent=parsed.levelsSpent;
-    }else if(levelsEarned>0){
-      const allocationText=String(entry.allocation||'').trim();
-      const itemText=String(entry.item||'').trim();
-      if(allocationText || itemText){
-        levelsSpent=levelsEarned;
+    const parsedLevelsSpent=(parsed && parsed.levelsSpent!=null)?parsed.levelsSpent:null;
+    if(Number.isFinite(parsedLevelsSpent) && parsedLevelsSpent>0){
+      levelsSpent=parsedLevelsSpent;
+    }else{
+      const fallbackMinus=dmToNullableNumber(entry.levels_minus);
+      const fallbackPlus=dmToNullableNumber(entry.levels_plus);
+      const fallbackLevel=(Number.isFinite(fallbackMinus) && fallbackMinus>0)
+        ? fallbackMinus
+        : ((Number.isFinite(fallbackPlus) && fallbackPlus>0)?fallbackPlus:null);
+      if(Number.isFinite(fallbackLevel) && fallbackLevel>0){
+        levelsSpent=fallbackLevel;
       }
     }
-    const entryLevelsPlus=(Number.isFinite(levelsEarned) && levelsEarned>0)?levelsEarned:null;
+    const entryLevelsPlus=null;
     const entryLevelsMinus=(Number.isFinite(levelsSpent) && levelsSpent>0)?levelsSpent:null;
     pushEntry({
       type:'run',
@@ -3678,17 +3754,22 @@ function buildDmEntries(){
     const hoursVal=dmToNullableNumber(alloc.hours);
     const bonusVal=dmToNullableNumber(alloc.extra_hours);
     const baseCost=dmToNullableNumber(alloc.cost);
-    const parsed=interpretAllocationDetails(alloc.allocation);
+    const allocationText=alloc.allocation;
+    const parsed=interpretAllocationDetails(allocationText);
     const parsedLevelsSpent=(parsed && parsed.levelsSpent!=null)?parsed.levelsSpent:null;
-    const levelsSpent=(Number.isFinite(parsedLevelsSpent) && parsedLevelsSpent>0)?parsedLevelsSpent:null;
+    const rawLevelsSpent=dmToNullableNumber(alloc.levels_plus);
+    const hasLevelKeyword=/\b(?:levels?|lvl)\b/i.test(String(allocationText||''));
+    const levelsSpent=(Number.isFinite(parsedLevelsSpent) && parsedLevelsSpent>0)
+      ? parsedLevelsSpent
+      : ((hasLevelKeyword && Number.isFinite(rawLevelsSpent) && rawLevelsSpent>0)?rawLevelsSpent:null);
     const effectiveCost=(parsed && parsed.downtimeSpent!=null)?parsed.downtimeSpent:baseCost;
     const effectiveGold=(parsed && parsed.goldSpent!=null)?parsed.goldSpent:null;
-    const earnsLevel=allocationGrantsLevelToPool(season);
+    const earnsLevel=allocationGrantsLevelToPool(season, allocationText, parsed);
     const entry={
       type:'allocation',
       season,
       date:alloc.date||'',
-      allocation:alloc.allocation||'',
+      allocation:allocationText||'',
       cost:effectiveCost,
       levels_plus:levelsSpent,
       levels_minus:earnsLevel?1:null,
